<resources>
    <string name="app_name">Essbar</string>
    <string name="customerNumber">Kundennummer</string>
    <string name="customerPassword">Paswort</string>
    <string name="login">Anmelden</string>
    <string name="today">\u00A0(Heute)</string>
    <string name="lunch">Mittag</string>
    <string name="lunch_list_fragment_title">Mittagessen</string>
    <string name="menu_fragment_title">Speiseplan</string>
    <string name="menu_confirmation_fragment_title">Änderungen</string>
    <string name="username_password_error">Ihre Anmeldung ist fehlgeschlagen. Prüfen Sie Kundennummer und Passwort?</string>
    <string name="username_required_error">Ihre Kundennummer wird benötigt.</string>
    <string name="password_required_error">Ihr Passwort wird benötigt.</string>
    <string name="unknown_error">Ein Fehler ist aufgetreten</string>
    <string name="no_secure_lock_error">Sie müssen Ihr Gerät mit einem PIN, Passwort oder Muster für diese Option sichern.</string>
    <string name="no_network_connection_error">Sie brauchen eine Internetverbindung.</string>
    <string name="decryption_canceled_error">Sie müssen sich authentifizieren damit wir Ihr Passwort entschlüsseln können.</string>
    <string name="save_credentials">Daten verschlüsselt speichern?</string>
    <string name="profile_section">Kunden</string>
    <string name="lunch_section">Mittagessen</string>
    <string name="login_section">Login</string>
    <plurals name="changed_orders">
        <item quantity="one">%1$d Menü</item>
        <item quantity="other">%1$d Menüs</item>
    </plurals>
    <string name="action_menu_change">Ändern</string>
    <string name="action_buy">Bestellen</string>
    <string name="action_change_order">Bestellung</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="action_calendar_week">Kalenderwoche wechseln</string>
    <string name="calendar_week_section">Kalenderwoche</string>

    <string name="date_today">Heute</string>
    <string name="date_yesterday">Gestern</string>
    <array name="weekdays">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </array>
    <string name="date_day_of_week">EEEE</string>
    <string name="date_past">E, dd. MMMM</string>
    <string name="date_past_year">E, dd. MMMM yyyy</string>

    <string name="acra_dialog_title">Essbar Fehler</string>
    <string name="acra_dialog_text">Leider ist ein Fehler aufgetreten. Möchten Sie einen Bericht zur Analyse per E-Mail verschicken?</string>
    <string name="acra_dialog_positiv">senden</string>
    <string name="acra_dialog_negativ">abbrechen</string>
</resources>
