<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

            <LinearLayout
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/list_item_section_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/section_height"
                    android:gravity="center_vertical"
                    android:text="@string/login_section"
                    style="@style/ListItemSection"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/HintTextAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@null"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/customerNumber"
                        android:inputType="number"
                        tools:ignore="UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextAppearance"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/HintTextAppearance"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@null"
                        android:drawableTint="@color/colorAccent"
                        android:hint="@string/customerPassword"
                        android:inputType="textPassword|textNoSuggestions"
                        tools:ignore="UnusedAttribute" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/saveCredentialsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@id/saveCredentials"
                        android:text="@string/save_credentials" />

                    <CheckBox
                        android:id="@+id/saveCredentials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="16dp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/loginButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_space"
                    android:text="@string/login" />

            </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>